openshift/base/openbao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbao
  labels:
    app: openbao
spec:
  selector:
    app: openbao
  ports:
    - name: http
      port: 8200
      targetPort: http
